<resources>

    <string name="app_name">com.jeden.tel</string>
    <string name="hello_world">阿的发/n
        生的发生的
        发生地方n/n
        阿萨德发生的发生
        的发生的发生的发生/
        n地方阿萨德发生地方阿萨德发/n
        司法斯蒂/n芬阿萨德发
        阿萨德发
        aaf啊法师打发士大夫阿萨德发
        阿萨德发生地方艾丝凡大是大非阿萨德发
          生的发生的
        发生地方n/n
        阿萨德发生的发生
        的发生的发生的发生/
        n地方阿萨德发生地方阿萨德发/n
        司法斯蒂/n芬阿萨德发
        阿萨德发
        aaf啊法师打发士大夫阿萨德发
        阿萨德发生地方艾丝凡大是大非阿萨德发
          生的发生的
        发生地方n/n
        阿萨德发生的发生
        的发生的发生的发生/
        n地方阿萨德发生地方阿萨德发/n
        司法斯蒂/n芬阿萨德发
        阿萨德发
        aaf啊法师打发士大夫阿萨德发
        阿萨德发生地方艾丝凡大是大非阿萨德发</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="title_tel_string">电话</string>
	<string name="title_msg_string">短信</string>
	<string name="title_black_string">黑名单</string>
	<string name="custom_input_title">添加自定义手机号码</string>
	<string name="phonebook_input_title">选择通讯录中的号码</string>
	<string name="custom_input_add">添加</string>
	<string name="custom_input_hint">请输入手机号码</string>
</resources>