<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adplugin.sdk.MainActivity$PlaceholderFragment" 
    android:orientation="vertical">
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_input_title"
        android:textSize="16sp"
        android:textColor="#606060"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <EditText 
            android:id="@+id/input_view"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:hint="@string/custom_input_hint"/>
        <Button 
            android:id="@+id/add_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/custom_input_add"/>
    </LinearLayout>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/phonebook_input_title"
        android:textSize="16sp"
        android:textColor="#606060"/>
    <ListView 
        android:id="@+id/tel_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </ListView>
</LinearLayout>
