<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.0">
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:orientation="horizontal">
	        <Button 
	            android:id="@+id/title_tel"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:layout_weight="1"
	            android:background="#666666"
	            android:text="@string/title_tel_string"
	            android:textSize="18sp"
	            android:textColor="#FFFFFF"/>
	        <Button 
	            android:id="@+id/title_msg"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:layout_weight="1"
	            android:background="#666666"
	            android:text="@string/title_msg_string"
	            android:textSize="18sp"
	            android:textColor="#FFFFFF"/>
	        <Button 
	            android:id="@+id/title_black"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:layout_weight="1"
	            android:background="#666666"
	            android:text="@string/title_black_string"
	            android:textSize="18sp"
	            android:textColor="#FFFFFF"/>
	    </LinearLayout>
	    <ImageView 
	        android:id="@+id/title_cursor"
	        android:layout_width="wrap_content"
	        android:layout_height="5dp"
	        android:contentDescription="@string/app_name"/>
	    <android.support.v4.view.ViewPager
	        android:id="@+id/content_view"
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:flipInterval="30"  
	        android:persistentDrawingCache="animation"/>
    </LinearLayout>
  	<Button 
  	    android:id="@+id/bottom_btn"
  	    android:layout_width="fill_parent"
  	    android:layout_height="50dp"
  	    android:textSize="22sp"/>
</LinearLayout>
